  attempts to use the argument's __int__ method to convert to an
  integer before packing.  It also produces a DeprecationWarning in
  this case.  (In Python 2.6, the behaviour was inconsistent: __int__
  was used for some integer codes but not for others, and the set of
  integer codes for which it was used differed between native packing
  and standard packing.)



What's New in Python 2.7 alpha 4?
=================================

*Release date: 2010-03-06*

Core and Builtins
-----------------

- Issue #7544: Preallocate thread memory before creating the thread to avoid
  a fatal error in low memory condition.

- Issue #7820: The parser tokenizer restores all bytes in the right if
  the BOM check fails.

- Issue #7309: Fix unchecked attribute access when converting
  UnicodeEncodeError, UnicodeDecodeError, and UnicodeTranslateError to
  strings.

- Issue #7649: "u'%c' % char" now behaves like "u'%s' % char" and raises a
  UnicodeDecodeError if 'char' is a byte string that can't be decoded using
  the default encoding.

- Issue #6902: Fix problem with built-in types format incorrectly with
  0 padding.

- Issue #2560: remove an unnecessary 'for' loop from my_fgets() in
  Parser/myreadline.c.

- Issue #7988: Fix default alignment to be right aligned for
  complex.__format__. Now it matches other numeric types.

- Issue #5211: the complex type no longer uses implicit coercion in
  mixed-type binary arithmetic operations.

Library
-------

- Issue #6906: Tk should not set Unicode environment variables on Windows.

- Issue #1054943: Fix unicodedata.normalize('NFC', text) for the Public Review
  Issue #29

- Issue #7494: fix a crash in _lsprof (cProfile) after clearing the profiler,
  reset also the pointer to the current pointer context.

- Issue #7232: Add support for the context manager protocol to the TarFile
  class.

- Issue #7250: Fix info leak of os.environ across multi-run uses of
  wsgiref.handlers.CGIHandler.
